tdf#114734 writerfilter: avoid PostIt exception

Comments (aka AnnotationMarks) cannot contain
a paragraph style. The exception was causing
all properties to be dropped.

This fixes the right-to-left issue.

Additionally, I probably also need to cancel
the toggle when dealing with justify.

Change-Id: I4f604f90aaad36ea56b8a9157a8a8458f39877c3